--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/webchannel-wrapper": "^1.0.5",
     "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.1.0",
